--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li>Croque Madame Sandwich</li>
-      <li>Fettuccine Alfredo</li>
-      <li>Chicken Florentine Style</li>
-      <li>Pot Roast</li>
+      <li><a href="./recipes/sandwich.html">Croque Madame Sandwich</a></li>
+      <li><a href="./recipes/alfredo.html">Fettuccine Alfredo</a></li>
+      <li><a href="./recipes/chicken.html">Chicken Florentine Style</a></li>
+      <li><a href="./recipes/potroast.html">Pot Roast</a></li>
     </ul>
   </body>
 </html>
