--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li><a href="./recipes/sandwich.html">Croque Madame Sandwich</a></li>
       <li><a href="./recipes/alfredo.html">Fettuccine Alfredo</a></li>
       <li><a href="./recipes/chicken.html">Chicken Florentine Style</a></li>
-      <li><a href="./recipes/potroast.html">Pot Roast</a></li>
+      <li><a href="./recipes/beefstew.html">Pot Roast</a></li>
     </ul>
   </body>
 </html>
