--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -5,5 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fettuccine Alfredo</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Fettuccine Alfredo</h1>
+    <img src="../images/alfredo.jpg" />
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 tablespoon unsalted butter</li>
+      <li>1 clove garlic, minced</li>
+      <li>1 teaspoon grated lemon zest</li>
+      <li>2 teaspoons all-purpose flour</li>
+      <li>1 cup low-fat (2%) milk</li>
+      <li>Kosher salt</li>
+      <li>2 tablespoons Neufchâtel or low-fat cream cheese</li>
+      <li>3/4 cup grated parmesan cheese, plus more for topping</li>
+      <li>3 tablespoons chopped fresh parsley</li>
+      <li>12 ounces fresh fettuccine</li>
+      <li>Freshly ground pepper</li>
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+      <li>
+        Make the sauce: Melt the butter in a skillet over medium heat. Add the
+        garlic and lemon zest and cook until the garlic is slightly soft, about
+        1 minute. Add in the flour and cook, stirring with a wooden spoon, 1
+        minute. Whisk in the milk and 3/4 teaspoon salt and cook, whisking
+        constantly, until just thickened, about 3 minutes. Add the Neufchâtel
+        and parmesan cheese; whisk until melted, about 1 minute. Stir in the
+        chopped parsley.
+      </li>
+      <li>
+        Meanwhile, bring a large pot of salted water to a boil. Add the
+        fettuccine and cook until al dente, 2 to 3 minutes. Reserve 1 cup
+        cooking water, then drain the pasta and return to the pot. Add the sauce
+        and 1/2 cup of the reserved cooking water to the pasta and gently toss
+        to combine, adding more cooking water as needed to loosen. Season with
+        salt. Divide among bowls and top with parmesan and pepper.
+      </li>
+    </ol>
+  </body>
 </html>
