--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -5,5 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chicken Florentine Style</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Chicken Florentine Style</h1>
+    <img src="../images/chicken.jpg" />
+    <h2>Ingredients</h2>
+    <ul>
+      <li>4 boneless skinless chicken breasts</li>
+      <li>Salt and freshly ground black pepper</li>
+      <li>All-purpose flour, for dredging</li>
+      <li>6 tablespoons (3/4 stick) unsalted butter</li>
+      <li>2 tablespoons shallots, sliced</li>
+      <li>1 tablespoon chopped garlic</li>
+      <li>1 1/2 cups dry white wine</li>
+      <li>1 cup whipping cream</li>
+      <li>1 tablespoon chopped fresh Italian parsley</li>
+      <li>2 (10-ounce) packages frozen cut-leaf spinach, thawed, drained</li>
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+      <li>
+        Sprinkle the chicken with salt and pepper. Dredge the chicken in the
+        flour to coat lightly. Shake off any excess flour. Melt 2 tablespoons of
+        butter in a heavy large skillet over medium heat. Add the chicken and
+        cook until brown, about 5 minutes per side. Transfer the chicken to a
+        plate and tent with foil to keep it warm.
+      </li>
+      <li>
+        Melt 2 tablespoons of butter in the same skillet over medium heat. Add
+        the shallots and garlic and saute until the shallots are translucent,
+        stirring to scrape up any browned bits on the bottom of the skillet,
+        about 1 minute. Add the wine. Increase the heat to medium-high and boil
+        until the liquid is reduced by half, about 3 minutes. Add the cream and
+        boil until the sauce reduces by half, stirring often, about 3 minutes.
+        Stir in the parsley. Season the sauce, to taste, with salt and pepper.
+        Add the chicken and any accumulated juices to the sauce, and turn the
+        chicken to coat in the sauce.
+      </li>
+      <li>
+        Meanwhile, melt the remaining 2 tablespoons of butter in another large
+        skillet over medium heat. Add the spinach and saute until heated
+        through. Season the spinach, to taste, with salt and pepper. Arrange the
+        spinach over a platter. Place the chicken atop the spinach. Pour the
+        sauce over and serve.
+      </li>
+    </ol>
+  </body>
 </html>
